# code-profile-tutorial

./: .gitignore  README.md  benchmark_gpt2.py  model.py  pyproject.toml  run_e2e_benchmark.sh  train_gpt2.py
results/e2e/: e2e_warmup0_config_20260218_010054.yaml  e2e_warmup0_steps_20260218_010054.csv  e2e_warmup0_summary_20260218_010054.csv  e2e_warmup2_config_20260218_010048.yaml  e2e_warmup2_steps_20260218_010048.csv  e2e_warmup2_summary_20260218_010048.csv  e2e_warmup5_config_20260218_010041.yaml  e2e_warmup5_steps_20260218_010041.csv  e2e_warmup5_summary_20260218_010041.csv
utils/: constants.py  data.py  helper.py
